# asyncplusplus

./: .gitignore  Async++Config.cmake.in  CMakeLists.txt  LICENSE  README.md  build-shared-clang-libc++.sh  build-shared-clang.sh  build-shared-gcc.sh  build-shared-intel.sh  build-shared-mingw.sh  build-shared.sh  build-static-clang-libc++.sh  build-static-clang.sh  build-static-gcc.sh  build-static-intel.sh  build-static-mingw.sh  build-static.sh
examples/: gtk_scheduler.cpp
include/: async++.h
include/async++/: aligned_alloc.h  cancel.h  continuation_vector.h  fifo_queue.h  parallel_for.h  parallel_invoke.h  parallel_reduce.h  partitioner.h  range.h  ref_count.h  scheduler.h  scheduler_fwd.h  spinlock.h  task.h  task_base.h  traits.h  when_all_any.h  work_steal_queue.h
src/: aligned_alloc.h  auto_reset_event.h  common.h  fifo_queue.h  internal.h  scheduler.cpp  singleton.h  task_wait_event.h  threadpool_scheduler.cpp  work_steal_queue.h
